--- a/Projects/xxdCmdb/web/templates/include/asset_basic.html
+++ b/Projects/xxdCmdb/web/templates/include/asset_basic.html
@@ -24,49 +24,49 @@
         <div class="col-md-7 control-label text-left">{{ response.data.sn }}</div>
     </div>
 
-    <div class="form-group col-md-6">
-        <div class="col-md-4 control-label">状态：</div>
-        <div class="col-md-7 control-label text-left">{{ response.data.asset.device_status_id }}</div>
-    </div>
+{#    <div class="form-group col-md-6">#}
+{#        <div class="col-md-4 control-label">状态：</div>#}
+{#        <div class="col-md-7 control-label text-left">{{ response.data.asset.device_status_id }}</div>#}
+{#    </div>#}
 
 
     <div class="form-group col-md-6">
-        <div class="col-md-4 control-label">更新时间</div>
-        <div class="col-md-7 control-label text-left">{{ response.data.asset.latest_date|date:"Y-m-d" }}</div>
+        <div class="col-md-4 control-label">上架时间：</div>
+        <div class="col-md-7 control-label text-left">{{ response.data.putaway }}</div>
     </div>
 
     <div class="dotted  col-md-12"></div>
 
     <div class="form-group col-md-6">
         <div class="col-md-4 control-label">机房：</div>
-        <div class="col-md-7 control-label text-left">{{ response.data.asset.idc.name }}</div>
+        <div class="col-md-7 control-label text-left">{{ response.data.idc }}</div>
     </div>
 
-    <div class="form-group col-md-6">
-        <div class="col-md-4 control-label">楼层：</div>
-        <div class="col-md-7 control-label text-left">{{ response.data.asset.idc.floor }}</div>
-    </div>
+{#    <div class="form-group col-md-6">#}
+{#        <div class="col-md-4 control-label">楼层：</div>#}
+{#        <div class="col-md-7 control-label text-left">{{ response.data.cabinet }}</div>#}
+{#    </div>#}
 
     <div class="form-group col-md-6">
         <div class="col-md-4 control-label">机柜：</div>
-        <div class="col-md-7 control-label text-left">{{ response.data.asset.cabinet_num }}</div>
+        <div class="col-md-7 control-label text-left">{{ response.data.cabinet }}</div>
     </div>
 
-    <div class="form-group col-md-6">
-        <div class="col-md-4 control-label">柜上位置：</div>
-        <div class="col-md-7 control-label text-left">{{ response.data.asset.cabinet_order }}</div>
-    </div>
+{#    <div class="form-group col-md-6">#}
+{#        <div class="col-md-4 control-label">柜上位置：</div>#}
+{#        <div class="col-md-7 control-label text-left">{{ response.data.asset.cabinet_order }}</div>#}
+{#    </div>#}
 
     <div class="dotted col-md-12"></div>
 
-    <div class="form-group col-md-6">
-        <div class="col-md-4 control-label">业务线：</div>
-        <div class="col-md-7 control-label text-left">{{ response.data.asset.business_unit.name }}</div>
-    </div>
+{#    <div class="form-group col-md-6">#}
+{#        <div class="col-md-4 control-label">业务线：</div>#}
+{#        <div class="col-md-7 control-label text-left">{{ response.data.asset.business_unit.name }}</div>#}
+{#    </div>#}
 
     <div class="col-md-12">
         <div class="form-group col-md-6">
-            <div class="col-md-4 control-label">业务联系人：</div>
+{#            <div class="col-md-4 control-label">业务联系人：</div>#}
             <div class="col-md-8 control-label text-left">
                 {% for obj in response.data.asset.business_unit.contact.users.all %}
                     <div>
