--- a/Projects/xxdCmdb/web/templates/include/asset_server_hardware.html
+++ b/Projects/xxdCmdb/web/templates/include/asset_server_hardware.html
@@ -76,13 +76,14 @@
             <td colspan="4">{{ response.data.cpu }}</td>
         </tr>
         <tr>
-            <td>CPU物理核数</td>
+            <td>CPU物理颗数</td>
             <td colspan="4">{{ response.data.cpu_num }}</td>
         </tr>
         <tr>
             <td>CPU逻辑核心数</td>
             <td colspan="4">{{ response.data.core_num }}</td>
         </tr>
+        <tr>
             <td>机房</td>
             <td colspan="4">{{ response.data.idc }}</td>
         </tr>
@@ -123,17 +124,18 @@
         <tr>
             <td>插槽</td>
             <td>容量GB</td>
+            <td >接口类型</td>
+            <td >转速(rpm)</td>
             <td>型号</td>
-            <td colspan="2">接口类型</td>
         </tr>
 
         {% for item in response.data.disk.all %}
             <tr>
                 <td>{{ item.slot }}</td>
                 <td>{{ item.capacity }}</td>
+                <td >{{ item.model }}</td>
+                <td >{{ item.rpm }}</td>
                 <td>{{ item.pd_type }}</td>
-                <td colspan="2">{{ item.model }}</td>
-
             </tr>
         {% endfor %}
         <!-- 硬盘信息结束 -->
