--- a/Projects/xxdCmdb/web/templates/include/asset_network_hardware.html
+++ b/Projects/xxdCmdb/web/templates/include/asset_network_hardware.html
@@ -55,9 +55,13 @@
             <td>型号</td>
             <td colspan="1">{{ response.data.model }}</td>
         </tr>
-                <tr>
+        <tr>
             <td>管理IP</td>
             <td colspan="1">{{ response.data.ip }}</td>
+        </tr>
+        <tr>
+            <td>序列号</td>
+            <td colspan="1">{{ response.data.sn }}</td>
         </tr>
                 <tr>
             <td>机房</td>
