--- a/Projects/xxdCmdb/web/templates/add_asset.html
+++ b/Projects/xxdCmdb/web/templates/add_asset.html
@@ -60,8 +60,7 @@
     <ul class="nav nav-tabs">
         <li class="active"><a aria-controls="hardware" role="tab" data-toggle="tab" href="#hardware">物理服务器</a></li>
         <li><a aria-controls="nic" role="tab" data-toggle="tab" href="#nic">交换机</a></li>
-        <li><a href="##">路由器</a></li>
-        <li><a href="##">防火墙</a></li>
+        <li><a aria-controls="nic" role="tab" data-toggle="tab" href="#firewall">防火墙</a></li>
     </ul>
     <div style="padding: 5px 8px;">
 
@@ -139,9 +138,9 @@
                 <label>CPU型号</label>
                     <div class="form-group" >
                         <div id="wd">
-                            <select class="selectpicker">
+                            <select id="cpu" class="selectpicker">
                                   {% for item in response.data %}
-                                  <option id="cpu" value={{ item.id }}>{{ item.name }}</option>
+                                  <option value={{ item.id }}>{{ item.name }}</option>
                                   {% endfor %}
                             </select>
                         </div>
@@ -167,6 +166,7 @@
                             <select class="selectpicker" id="core_num">
                                   <option id="cpu" value='4'>4</option>
                                   <option id="cpu" value='8'>8</option>
+                                  <option id="cpu" value='12'>12</option>
                                   <option id="cpu" value='16'>16</option>
                                   <option id="cpu" value='32'>32</option>
                                   <option id="cpu" value='64'>64</option>
@@ -261,16 +261,20 @@
         </div>
     <br>
     <button id="add_host_save" class="btn btn-primary" type="button" style="float: right; margin-right: 20px; width: 150px">提交保存</button>
-
     </div>
+
         <div role="tabpanel" class="tab-pane" id="nic">
-            <label>型号</label>
+            <label>交换机型号</label>
             <div class="form-group">
               <input id="nic_model" type="text" class="form-control" placeholder="">
             </div>
             <label>管理IP</label>
             <div class="form-group">
               <input id="nic_ip" type="text" class="form-control" placeholder="">
+            </div>
+            <label>序列号</label>
+            <div class="form-group">
+              <input id="nic_sn" type="text" class="form-control" placeholder="">
             </div>
             <label>机房</label>
             <div class="form-group">
@@ -290,8 +294,42 @@
             </div>
 
             <button id="add_nic_save" class="btn btn-primary" type="button" style="float: right; margin-right: 20px; width: 150px">提交保存</button>
-
         </div>
+
+        <!-- 添加防火墙 -->
+        <div role="tabpanel" class="tab-pane" id="firewall">
+            <label>防火墙型号</label>
+            <div class="form-group">
+              <input id="fire_model" type="text" class="form-control" placeholder="">
+            </div>
+            <label>管理IP</label>
+            <div class="form-group">
+              <input id="fire_ip" type="text" class="form-control" placeholder="">
+            </div>
+            <label>序列号</label>
+            <div class="form-group">
+              <input id="fire_sn" type="text" class="form-control" placeholder="">
+            </div>
+            <label>机房</label>
+            <div class="form-group">
+              <input id="fire_idc" type="text" class="form-control" placeholder="">
+            </div>
+            <label>机柜</label>
+            <div class="form-group">
+              <input id="fire_cabinet" type="text" class="form-control" placeholder="">
+            </div>
+            <label>上架日期</label>
+            <div class="form-group">
+              <input id="fire_putaway" type="text" class="form-control" placeholder="">
+            </div>
+            <label>保修日期</label>
+            <div class="form-group">
+              <input id="fire_service" type="text" class="form-control" placeholder="">
+            </div>
+
+            <button id="add_firewall_save" class="btn btn-primary" type="button" style="float: right; margin-right: 20px; width: 150px">提交保存</button>
+        </div>
+
     </div>
     </div>
 
@@ -376,11 +414,12 @@
             $('#add_nic_save').click(function () {
                 var nic_model = $('#nic_model').val();
                 var nic_ip = $('#nic_ip').val();
+                var nic_sn = $('#nic_sn').val();
                 var nic_idc = $('#nic_idc').val();
                 var nic_cabinet = $('#nic_cabinet').val();
                 var nic_putaway = $('#nic_putaway').val();
                 var nic_service = $('#nic_service').val();
-                if(nic_model == ''|| nic_ip ==''|| nic_cabinet=='' || nic_putaway=='' || nic_service==''){
+                if(nic_model == ''|| nic_ip ==''|| nic_cabinet=='' || nic_putaway=='' || nic_service=='' || nic_sn==''){
                     alert('输入不能为空...');
                     return false
                 }else {
@@ -388,7 +427,38 @@
                         url: '/add-asset.html',
                         type: 'POST',
                         data: {'nic_model': nic_model, 'nic_ip': nic_ip, 'nic_idc': nic_idc,'nic_cabinet': nic_cabinet,
-                               'nic_putaway': nic_putaway, 'nic_service': nic_service},
+                               'nic_putaway': nic_putaway, 'nic_service': nic_service, 'nic_sn': nic_sn},
+                        dataType: 'JSON',
+                        traditional: true,
+                        success: function (response) {
+                            if(response.status){
+                                alert('新资产添加成功！');
+
+                            }else {
+                                alert(response.message);
+                            }
+                        }
+                    })
+                }
+            });
+
+            $('#add_firewall_save').click(function () {
+                var fire_model = $('#fire_model').val();
+                var fire_ip = $('#fire_ip').val();
+                var fire_sn = $('#fire_sn').val();
+                var fire_idc = $('#fire_idc').val();
+                var fire_cabinet = $('#fire_cabinet').val();
+                var fire_putaway = $('#fire_putaway').val();
+                var fire_service = $('#fire_service').val();
+                if(fire_model == ''|| fire_ip ==''|| fire_cabinet=='' || fire_putaway=='' || fire_service=='' || fire_sn==''){
+                    alert('输入不能为空...');
+                    return false
+                }else {
+                    $.ajax({
+                        url: '/add-asset.html',
+                        type: 'POST',
+                        data: {'fire_model': fire_model, 'fire_ip': fire_ip, 'fire_idc': fire_idc,'fire_cabinet': fire_cabinet,
+                               'fire_putaway': fire_putaway, 'fire_service': fire_service, 'fire_sn': fire_sn, 'isfirewall': 1},
                         dataType: 'JSON',
                         traditional: true,
                         success: function (response) {
@@ -402,7 +472,6 @@
                     })
                 }
             })
-
 
         });
 
