--- a/Projects/xxdCmdb/web/templates/include/asset_network_hardware.html
+++ b/Projects/xxdCmdb/web/templates/include/asset_network_hardware.html
@@ -52,6 +52,10 @@
             <td colspan="4">值</td>
         </tr>
         <tr>
+            <td>品牌</td>
+            <td colspan="1">{{ response.data.brand }}</td>
+        </tr>
+        <tr>
             <td>型号</td>
             <td colspan="1">{{ response.data.model }}</td>
         </tr>
